--- a/WiDS_Datathon2019_BasicDataAnalysis.ipynb
+++ b/WiDS_Datathon2019_BasicDataAnalysis.ipynb
@@ -77,7 +77,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Ve a tu cuenta en kaggle, descarga tu Api-Key. Abre el archivo con un editor de texto y copia el username y key. Reemplaza esos valores en la siguiente celda.\n",
+        "Ve a tu cuenta en kaggle, descarga tu API-Key. Abre el archivo con un editor de texto y copia el username y key. Reemplaza esos valores en la siguiente celda.\n",
         "\n",
         "*Go to your kaggle account and download your api key. Open the file with a text editor and copy the username and the key to replace them on the following cells.*\n",
         "## Configura tu Kaggle Api key\n",
@@ -831,7 +831,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### Visualizacion de ejemplos de dataset\n",
+        "### Visualización de ejemplos de dataset\n",
         "\n",
         "Visualizaremos un ejemplo al azar del dataset\n",
         "\n",
@@ -919,7 +919,7 @@
       "cell_type": "markdown",
       "source": [
         "### Dataset folder preparation\n",
-        "Vamos a crear una carpeta por cada clase y vamos a mover las imagenes a su respectivo folder\n",
+        "Vamos a crear una carpeta por cada clase y vamos a mover las imágenes a su respectivo folder\n",
         "\n",
         "*We will create a folder per each class and we will copy the images to it's folder class*"
       ]
